# comfyui-MJAPI-party

./: .gitignore  README.md  README_en.md  __init__.py  config.ini  pyproject.toml  requirements.txt
doc/: node_list.md
nodes/: __init__.py  base.py  config.py  node.py  volc_pic_node.py
web/: mojie.js
workflow/: Dreamina(video)即梦视频.json  Dreamina(参考生图).json  Dreamina.json  GPT-image-2.json  Gemini-Nano单图多轮编辑.json  Gemini3-Agent-Seedream版.json  Gemini3-Agent-VI设计.json  Gemini3-Agent-跨境多图详情图.json  Gemini3-Agent-跨境多图详情图_多图参考.json  Gemini3-LLM.json  Kontext.json  NanoBanana-pro.json  NanoBanana.json  Qwen-image.json  Vidu_reference.json  flux-2-pro.json  redux万物迁移.json  redux万物迁移api.json  seedance.json  seededit.json  seedream_v4.json  图片翻译.json  图片高清放大.json  服装模特生成(合集).json  服装模特生成(生成组图).json
