[project]
name = "Mojie-API-Party"
description = "A node that aggregates many powerful API features,Easier integration into workflows"
version = "1.5.5"
license = {file = "LICENSE"}
dependencies = []
classifiers = ["Operating System :: OS Independent"]

[project.urls]
Repository = "https://github.com/MoJIeAIGC/comfyui-MJAPI-party"
"Request url" = "https://www.mojieaigc.com"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "mojieaigc"
DisplayName = "Mojie-API-Party"
Icon = "https://mojieaigc.com/stat/logo.png"
includes = []
 